[gd_scene load_steps=10 format=3 uid="uid://x6ck7khwhemq"]

[ext_resource type="Script" path="res://scripts/death_slime.gd" id="1_2bwjp"]
[ext_resource type="Texture2D" uid="uid://b43036qp3q0yj" path="res://assets/sprites (brackeys)/slime_purple.png" id="1_wrcgm"]
[ext_resource type="PackedScene" uid="uid://dymev1wewgm1d" path="res://scenes/killzone.tscn" id="2_jkcwd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gyw2y"]
atlas = ExtResource("1_wrcgm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s73j"]
atlas = ExtResource("1_wrcgm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qybmw"]
atlas = ExtResource("1_wrcgm")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_blqey"]
atlas = ExtResource("1_wrcgm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rrgn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyw2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s73j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qybmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blqey")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ndnw"]
size = Vector2(12, 13)

[node name="death_slime" type="Node2D" groups=["Player"]]
script = ExtResource("1_2bwjp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_rrgn7")
autoplay = "default"
frame_progress = 0.352093

[node name="Killzone" parent="." groups=["Player"] instance=ExtResource("2_jkcwd")]
position = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_2ndnw")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-11, 0)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
[connection signal="ready" from="Killzone" to="." method="_on_killzone_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
